--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -13,6 +13,21 @@
               font-size: 2.5rem;
               padding: 1rem;
        }
+       .imgcontainer{
+           width: 100%;
+           height: 100%;
+           overflow: hidden;
+           align-items: center;
+           border-left-width: 40px;
+
+           img{
+                width: 30%;
+                height: 50%;
+                left: 40px;
+                
+            
+           }
+       }
     }
 
     .right{
