--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,20 +9,20 @@
         background-color: #2c313c; 
         overflow: hidden;
        h1{
+              font-size: 60px;
               color: #fff;
               font-size: 2.5rem;
               padding: 1rem;
        }
        .imgcontainer{
-           width: 100%;
-           height: 100%;
+           width: 700px;
+           height: 700px;
            overflow: hidden;
            align-items: center;
            border-left-width: 40px;
 
            img{
                 width: 30%;
-                height: 50%;
                 left: 40px;
                 
             
