--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -68,7 +68,7 @@
     }
 
     &.active{
-        background-color: #4d4d4e;
+        background-color: black;
 
         .hamburger{
             span{
