--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -3,36 +3,87 @@
 .intro{
     display: flex;
     
-    
     .left{
         flex :0.6;
         background-color: #2c313c; 
         overflow: hidden;
+        width: 100%;
+        height: 100%;
+        padding-left: 40px;
+        text-align: left;
+        
        h1{
-              font-size: 60px;
-              color: #fff;
-              font-size: 2.5rem;
-              padding: 1rem;
-       }
-       .imgcontainer{
-           width: 700px;
-           height: 700px;
-           overflow: hidden;
-           align-items: center;
-           border-left-width: 40px;
+            margin-top: 80px;
+            color: white;
+            font-size: 50px;
+            font-weight: bold;
+            margin-bottom: 20px;      
 
-           img{
-                width: 30%;
-                left: 40px;
-                
-            
-           }
+       }
+       h2{
+            color: white;
+            font-size: 45px;
+            font-weight: bold;
+            margin-bottom: 20px;
+
+       }
+       h3{
+            color: white;
+            font-size: 35px;
+            font-weight: bold;
+            margin-bottom: 20px;
+       }
+       h4{
+            margin-top: 40px;
+            color: #ffd700;
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
+       }
+       .flat-button{
+        color: #ffd700;
+        font-size: 13px;
+        font-weight: 400;
+        letter-spacing: 4px;
+        font-family: sans-serif;
+        text-decoration: none;
+        padding: 10px 18px;
+        border:1px solid #ffd700;
+        margin-top: 25px;
+        float: left;
+        animation: fadeIn 1s 3s backwards;
+        white-space: nowrap;
+
+        &:hover{
+            background-color: #ffd700;
+            color: #333;
+        }
+
+    }   
        }
     }
 
     .right{
         flex :0.4;
         background-color: #21252b;
+
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            
+            h5{
+                color: #fff;
+                font-size: 32px;
+                margin: 0;
+                font-family: 'Coolvetica';
+                font-weight: 400;
+                color: #ffd700;
+                text-shadow: 0 0 10px #766804;
         
+            }
     }
 }
