--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -46,6 +46,7 @@
         }
 
         .right{
+            background-color: black;
 
             .hamburger{
                 width: 32px;
@@ -54,6 +55,7 @@
                 flex-direction: column;
                 justify-content: space-between;
                 cursor: pointer;
+                
 
 
                 span{
