--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -3,7 +3,7 @@
 .menu{
     width: 300px;
     height: 100vh;
-    background-color: #000000;
+    background-color: transparent;
     position: fixed;
     top: 0;
     right: -300px;
