--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -47,14 +47,19 @@
 
         .right{
             background-color: black;
+            left: 20px;
+            
 
             .hamburger{
+                
                 width: 32px;
                 height: 25px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
                 cursor: pointer;
+                float: right;
+                
                 
 
 
