--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -74,7 +74,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            
+
             h5{
                 color: #fff;
                 font-size: 32px;
@@ -85,5 +85,30 @@
                 text-shadow: 0 0 10px #766804;
         
             }
+            .flat-button{
+                position: absolute;
+                bottom: 160px;
+                color: #ffd700;
+                font-size: 13px;
+                font-weight: 400;
+                letter-spacing: 4px;
+                font-family: sans-serif;
+                text-decoration: none;
+                padding: 10px 18px;
+                border:1px solid #ffd700;
+                margin-top: 25px;
+                float: left;
+                animation: fadeIn 1s 3s backwards;
+                white-space: nowrap;
+        
+                &:hover{
+                    background-color: #ffd700;
+                    color: #333;
+                }
+        
+            }   
+            
+
+
     }
 }
