--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,25 @@
 .about{
-    background-color: #154030;
+    background-color: #2c313c;
+
+    .wrapper{
+        position: absolute;
+        padding-left: 3%;
+        padding-right: 3%;
+
+        h1{
+            color: white;
+            font-size: 50px;
+            font-weight: bold;
+            padding-left: 20px;
+            text-align: left;
+            margin-top: 50px;
+        }
+        p{
+            padding-left: 20px;
+            text-align: left;
+            color: white;
+            font-size: 18px;
+            margin-top: 50px;
+        }
+    }
 }
