--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,11 +9,11 @@
         overflow: hidden;
         width: 100%;
         height: 100%;
-        padding-left: 40px;
+        padding-left: 5%;
         text-align: left;
         
        h1{
-            margin-top: 80px;
+            margin-top:10%;
             color: white;
             font-size: 50px;
             font-weight: bold;
@@ -79,7 +79,7 @@
                 color: #fff;
                 font-size: 32px;
                 margin: 0;
-                font-family: 'Coolvetica';
+                font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 color: #ffd700;
                 text-shadow: 0 0 10px #766804;
@@ -87,7 +87,7 @@
             }
             .flat-button{
                 position: absolute;
-                bottom: 160px;
+                bottom: 30%;
                 color: #ffd700;
                 font-size: 13px;
                 font-weight: 400;
