--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,22 +1,64 @@
 .portfolio{
-    background-color: white;
+    background-color: #1d2128;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 
     h1{
         font-size: 50px;
+        color: white;
     }
     ul{
         margin: 10px;
         padding: 0;
         list-style: none;
         display: flex;
+        overflow: hidden;
 
-        li{
-            font-size: 14px;
-            margin-right: 50px;
-            padding: 0.7 ;
+       
+    }
+
+    .container{
+        width: 80%;
+        display: flex;
+        align-self: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .item{
+            width: 220px;
+            height: 150px;
+            border-radius: 20px;
+            border: 1px solid #f5f5f5;
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            transition: all 0.5s ease;
+
+            h3{
+                position: absolute;
+                font-size: 20px;
+                cursor: pointer;
+                color: #ffd700;
+                }
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 1;
+            }
+
+            &:hover{
+                background-color: #2c313c;
+                img{
+                    opacity: 0.2;
+                    z-index: 0;
+                }
+            }
         }
+
     }
 }
