--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -68,7 +68,7 @@
                     height: 2px;
                     background-color: #4d4d4e;
                     transform-origin: left;
-                    transition: all 2s ease;
+                    transition: all .75s ease;
                 }
             }
         }
