--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,76 @@
 .contact{
-    background-color: lightblue;
+    background-color: #b2b2b2;
+    display: flex;
+    
+
+    .left{
+        flex: 0.4;
+        background-color: #e0e0e0;
+        display: flex;
+    }
+
+    .right{
+        background-color: #b2b2b2;
+        flex: 0.6;
+        align-items: center;
+        justify-content: center;
+
+        h2{
+            margin-top: 5%;
+            font-size: 30px;
+            flex-direction: column;
+            text-align: center;
+            justify-content: center;
+        }
+
+        form{
+            width: 70%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: auto;
+            padding-top: 5vh;
+            justify-content: center;
+
+            input {
+                width: 300px;
+                height: 30px;
+                font-size: 14px;
+                flex-direction: column;
+                align-items: center;
+            }
+            textarea{
+                width: 300px;
+                height: 100px;
+                font-size: 14px;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin-top: 10px;
+            }
+            button{
+                margin-top: 20px;
+                width: 150px;
+                height: 30px;
+                color: whitesmoke;
+                background-color: black;
+                border: none;
+                border-radius: 10px;
+                font-weight: 500;
+                cursor: pointer;
+
+                &:focus{
+                    outline: none;
+                }
+
+            }
+
+            span{
+                color: black;
+                font-size: 18px;
+                margin-top: 10px;
+            }
+        }
+    }
 }
