--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -18,57 +18,68 @@
         height: 100%;
         padding-left: 5%;
         text-align: left;
+
+        .wrapper-left{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin: auto;
+            margin-top: auto;
+
+            
         
-       h1{
-            margin-top:10%;
-            color: white;
-            font-size: 50px;
-            font-weight: bold;
-            margin-bottom: 20px;      
-
-       }
-       h2{
-            color: white;
-            font-size: 45px;
-            font-weight: bold;
-            margin-bottom: 20px;
-
-       }
-       h3{
-            color: white;
-            font-size: 35px;
-            font-weight: bold;
-            margin-bottom: 20px;
-       }
-       h4{
-            margin-top: 40px;
-            color: #ffd700;
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 20px;
-       }
-       .flat-button{
-        color: #ffd700;
-        font-size: 13px;
-        font-weight: 400;
-        letter-spacing: 4px;
-        font-family: sans-serif;
-        text-decoration: none;
-        padding: 10px 18px;
-        border:1px solid #ffd700;
-        margin-top: 25px;
-        float: left;
-        animation: fadeIn 1s 3s backwards;
-        white-space: nowrap;
-
-        &:hover{
-            background-color: #ffd700;
-            color: #333;
-        }
-
-    }   
+        
+            h1{
+                 margin-top:10%;
+                 color: white;
+                 font-size: 50px;
+                 font-weight: bold;
+                 margin-bottom: 20px;      
+            
+            }
+            h2{
+                 color: white;
+                 font-size: 45px;
+                 font-weight: bold;
+                 margin-bottom: 20px;
+            
+            }
+            h3{
+                 color: white;
+                 font-size: 35px;
+                 font-weight: bold;
+                 margin-bottom: 20px;
+            }
+            h4{
+                 margin-top: 40px;
+                 color: #ffd700;
+                 font-size: 20px;
+                 font-weight: bold;
+                 margin-bottom: 20px;
+            }
+            .flat-button{
+             color: #ffd700;
+             font-size: 13px;
+             font-weight: 400;
+             letter-spacing: 4px;
+             font-family: sans-serif;
+             text-decoration: none;
+             padding: 10px 18px;
+             border:1px solid #ffd700;
+             margin-top: 25px;
+             float: left;
+             animation: fadeIn 1s 3s backwards;
+             white-space: nowrap;
+             max-width: fit-content;
+            
+                 &:hover{
+                     background-color: #ffd700;
+                     color: #333;
+                 }
+            }   
        }
     }
+}
 
     .right{
         flex :0.4;
