--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -39,6 +39,7 @@
                 font-size: 14px;
                 flex-direction: column;
                 align-items: center;
+                margin-top: 10px;
             }
             textarea{
                 width: 300px;
