--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -2,7 +2,7 @@
 
 
 .intro{
-    display: flex;
+    
 
     @include mobile{
         flex-direction: column;
@@ -10,48 +10,42 @@
         justify-content: center;
     }
     
-    .left{
-        flex :0.6;
         background-color: #2c313c; 
         overflow: hidden;
-        width: 100%;
-        height: 100%;
+        position: relative;
         padding-left: 5%;
         text-align: left;
 
-        .wrapper-left{
+        .wrapper{
             display: flex;
             flex-direction: column;
             justify-content: center;
             margin: auto;
             margin-top: auto;
 
-            
-        
-        
             h1{
                  margin-top:10%;
                  color: white;
-                 font-size: 50px;
+                 font-size: 25px;
                  font-weight: bold;
                  margin-bottom: 20px;      
             
             }
             h2{
                  color: white;
-                 font-size: 45px;
+                 font-size: 20px;
                  font-weight: bold;
                  margin-bottom: 20px;
             
             }
             h3{
                  color: white;
-                 font-size: 35px;
+                 font-size: 20px;
                  font-weight: bold;
                  margin-bottom: 20px;
             }
             h4{
-                 margin-top: 40px;
+                 margin-top: 10px;
                  color: #ffd700;
                  font-size: 20px;
                  font-weight: bold;
@@ -78,55 +72,4 @@
                  }
             }   
        }
-    }
-}
-
-    .right{
-        flex :0.4;
-        background-color: #21252b;
-
-        .wrapper{
-            width: 100%;
-            height: 100%;
-            padding-left: 50px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            h5{
-                color: #fff;
-                font-size: 32px;
-                margin: 0;
-                font-family: 'Roboto', sans-serif;
-                font-weight: 400;
-                color: #ffd700;
-                text-shadow: 0 0 10px #766804;
-        
-            }
-            .flat-button{
-                position: absolute;
-                bottom: 30%;
-                color: #ffd700;
-                font-size: 13px;
-                font-weight: 400;
-                letter-spacing: 4px;
-                font-family: sans-serif;
-                text-decoration: none;
-                padding: 10px 18px;
-                border:1px solid #ffd700;
-                margin-top: 25px;
-                float: left;
-                animation: fadeIn 1s 3s backwards;
-                white-space: nowrap;
-        
-                &:hover{
-                    background-color: #ffd700;
-                    color: #333;
-                }
-        
-            }   
-            
-
-
-    }
-}
+}  
